Change from LinkedList to Arrayist for better performance Fix to #110 Problems with Generator support in Eclipse CMSIS pack manager plugin